hphp/test/zend/good/Zend/tests/bug65911.php.expectf

Fatal error: Invalid static property access: A::this in %s/bug65911.php on line 9
